--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "axios": "^1.11.0",
     "json-server": "^1.0.0-beta.3",
     "vite": "^7.0.6"
+  },
+  "devDependencies": {
+    "animate.css": "^4.1.1"
   }
 }
